# psOff_thirdParty

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
patches/: ds5_spk.patch  interprocess_semaphore.patch
projects/wepoll/: CMakeLists.txt
projects/xml3All/: xml3all.h
