cmake_minimum_required(VERSION 3.24)
include(ExternalProject)

set(ProjectName psOff_third_party)
project(${ProjectName} VERSION 0.0.1)

set(INSTALL_DIR ${CMAKE_BINARY_DIR}/install)
set(BUILDS_DIR ${CMAKE_BINARY_DIR}/builds)

unset(CMAKE_IMPORT_LIBRARY_SUFFIX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /OPT:REF,ICF")
set(CMAKE_INSTALL_MESSAGE LAZY)

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_WINDOWS_SYMBOL_VISIBILITY_IN_STATIC_LIBRARIES OFF)

ExternalProject_Add(zlib_project
  SOURCE_DIR ${CMAKE_SOURCE_DIR}/projects/zlib
  BINARY_DIR ${BUILDS_DIR}/zlib
  CMAKE_ARGS
  -DCMAKE_BUILD_TYPE:STRING=Release
  -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}
  -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
  -DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}
  -DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}
  -DCMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}
)

install(FILES "projects/fff/fff.h" DESTINATION ${INSTALL_DIR}/include/fff)

# P7
add_subdirectory(projects/p7)
set_target_properties(p7
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${INSTALL_DIR}/lib"
  LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/bin"
  RUNTIME_OUTPUT_DIRECTORY "${INSTALL_DIR}/bin"
)

install(DIRECTORY "projects/p7/Headers" DESTINATION ${INSTALL_DIR}/include/p7
  FILES_MATCHING PATTERN "*.h"
)

# SDL2
add_subdirectory(projects/SDL)
set_target_properties(SDL2
  PROPERTIES
  ARCHIVE_OUTPUT_DIRECTORY "${INSTALL_DIR}/bin"
  LIBRARY_OUTPUT_DIRECTORY "${INSTALL_DIR}/lib"
  RUNTIME_OUTPUT_DIRECTORY "${INSTALL_DIR}/bin"
)
install(DIRECTORY "${CMAKE_BINARY_DIR}/projects/SDL/include" DESTINATION ${INSTALL_DIR}
  FILES_MATCHING PATTERN "*.h"
)

ExternalProject_Add(libpng_project
  SOURCE_DIR ${CMAKE_SOURCE_DIR}/projects/libpng
  BINARY_DIR ${BUILDS_DIR}/libpng
  CMAKE_ARGS
  -DCMAKE_BUILD_TYPE:STRING=Release
  -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}
  -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
  -DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}
  -DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}
  -DCMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}

  -DPNG_SHARED:BOOL=ON
  -DPNG_STATIC:BOOL=OFF
  -DPNG_EXECUTABLES:BOOL=ON
  -DPNG_TOOLS:BOOL=OFF
  -DPNG_TESTS:BOOL=OFF
  -DSKIP_INSTALL_ALL:BOOL=OFF
  -DZLIB_LIBRARY:STRING=${INSTALL_DIR}/lib/zlib.lib
  -DZLIB_INCLUDE_DIR:STRING=${INSTALL_DIR}/include
)
ExternalProject_Add_StepDependencies(libpng_project install zlib_project)

ExternalProject_Add(optick_project
  SOURCE_DIR ${CMAKE_SOURCE_DIR}/projects/optick
  BINARY_DIR ${BUILDS_DIR}/optick
  CMAKE_ARGS
  -DCMAKE_BUILD_TYPE:STRING=Release
  -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}
  -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
  -DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}
  -DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}
  -DCMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}
)

set(gtest_force_shared_crt on)
add_subdirectory(projects/googletest)

install(DIRECTORY "projects/ffmpeg/" DESTINATION "${INSTALL_DIR}"
  FILES_MATCHING PATTERN "*.dll"
)

install(DIRECTORY "projects/openssl/" DESTINATION "${INSTALL_DIR}"
  FILES_MATCHING PATTERN "*.dll"
)

install(DIRECTORY "projects/nlohmann/" DESTINATION ${INSTALL_DIR}/include
  FILES_MATCHING PATTERN "*.h"
)


ExternalProject_Add(magic_enum_project
  SOURCE_DIR ${CMAKE_SOURCE_DIR}/projects/magic_enum
  BINARY_DIR ${BUILDS_DIR}/magic_enum
  CMAKE_ARGS
  -DCMAKE_BUILD_TYPE:STRING=Release
  -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}
  -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
  -DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}
  -DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}
  -DCMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}

  -DMAGIC_ENUM_OPT_BUILD_EXAMPLES:BOOL=OFF
  -DMAGIC_ENUM_OPT_BUILD_TESTS:BOOL=OFF
  -DMAGIC_ENUM_OPT_INSTALL:BOOL=ON
)

install(DIRECTORY "projects/alpaca/include" DESTINATION ${INSTALL_DIR}/include)

ExternalProject_Add(vma_project
  SOURCE_DIR ${CMAKE_SOURCE_DIR}/projects/VulkanMemoryAllocator
  BINARY_DIR ${BUILDS_DIR}/vma
  CMAKE_ARGS
  -DCMAKE_BUILD_TYPE:STRING=Release
  -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}
  -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
  -DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}
  -DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}
  -DCMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}
)

install(DIRECTORY "projects/xxhash/include/" DESTINATION ${INSTALL_DIR}/include)

ExternalProject_Add(libzip_project
  SOURCE_DIR ${CMAKE_SOURCE_DIR}/projects/libzip
  BINARY_DIR ${BUILDS_DIR}/libzip
  CMAKE_ARGS
  -DCMAKE_BUILD_TYPE:STRING=Release
  -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR}
  -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
  -DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}
  -DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}
  -DCMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}

  -DENABLE_COMMONCRYPTO:BOOL=ON
  -DENABLE_GNUTLS:BOOL=ON
  -DENABLE_MBEDTLS:BOOL=ON
  -DENABLE_OPENSSL:BOOL=OFF
  -DENABLE_FDOPEN:BOOL=OFF
  -DBUILD_TOOLS:BOOL=OFF
  -DBUILD_REGRESS:BOOL=OFF
  -DBUILD_EXAMPLES:BOOL=OFF
  -DBUILD_DOC:BOOL=OFF
  -DENABLE_ZSTD:BOOL=OFF
  -DENABLE_LZMA:BOOL=OFF
  -DENABLE_BZIP2:BOOL=OFF
  -DLIBZIP_DO_INSTALL:BOOL=ON
)
ExternalProject_Add_StepDependencies(libzip_project install zlib_project)